KC-6646 #comment Few minor changes in GET Shop API and created Create Shop Testcase
